--- a/TrabajoFinal/src/main/resources/templates/fragments/header.html
+++ b/TrabajoFinal/src/main/resources/templates/fragments/header.html
@@ -31,6 +31,9 @@
 						
 							<li class="active"><a th:href="@{/especialidad/listar}">Especialidad</a></li>
 							<li class="active"><a th:href="@{/abogado/listar}">Abogado</a></li>
+							<li class="active"><a th:href="@{/caso/listar}">Caso</a></li>
+							<li class="active"><a th:href="@{/registroCaso/listar}">Casos Registrados</a></li>
+							
 	
 						</ul>
 						 
