--- a/TrabajoFinal/src/main/resources/templates/listCasos.html
+++ b/TrabajoFinal/src/main/resources/templates/listCasos.html
@@ -4,7 +4,7 @@
 
 	<head>
 		<meta charset="UTF-8"></meta>
-		<title>Abogados</title>
+		<title>Casos</title>
 		<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.16.0/jquery.validate.js">
 		</script>
 		<link 	href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"
@@ -23,12 +23,12 @@
 				<div class="row clearfix">
 					<div class="col-md-12 column">
 						
-						<a 	style="border-bottom-color: green" th:href="@{/abogado/irRegistrar}"
+						<a 	style="border-bottom-color: green" th:href="@{/caso/irRegistrar}"
 							id="add-row" type="button" class="btn btn-primary btn-md left-block"> 
-							<span class="glyphicon glyphicon-plus"></span> Abogado
+							<span class="glyphicon glyphicon-plus"></span> Casos
 						</a>
 						
-						<a 	style="border-bottom-color: green" th:href="@{/abogado/irBuscar}"
+						<a 	style="border-bottom-color: green" th:href="@{/caso/irBuscar}"
 							id="add-row" type="button" class="btn btn-primary btn-md left-block"> 
 							<span class="glyphicon glyphicon-search"></span> 
 						</a>
@@ -38,26 +38,30 @@
 							<thead>
 								<tr>
 									<th class="text-center">CODIGO</th>
-									<th class="text-center">PET</th>
-									<th class="text-center">RAZA</th>
+									<th class="text-center">CASO</th>
+									<th class="text-center">JUZGADO</th>
+									<th class="text-center">RESOLUCION</th>
+									<th class="text-center">CLIENTE</th>
 									<th class="text-center">OPERACIÓN</th>
 									<th class="text-center">OPERACIÓN</th>
 								</tr>
 							</thead>
 							
 							<tbody>
-								<tr th:each="p: ${listaAbogados}">
+								<tr th:each="p: ${listaCasos}">
 									
 									<!-- th:text muestra una linea de texto -->
 									
-									<td th:text="${p.idAbogado}"></td>
-									<td th:text="${p.nameAbogado}"></td>
-									<td th:text="${p.especialidad.nameEspecialidad}"></td>
+									<td th:text="${p.idCaso}"></td>
+									<td th:text="${p.nameCaso}"></td>
+									<td th:text="${p.nameJuzgado}"></td>
+									<td th:text="${p.caso.nameCaso}"></td>
+									<td th:text="${p.cliente.nameCliente}"></td>
 								
 									<!-- th:href Redirecciona -->
 									
-									<td><a th:href="@{/abogado/eliminar?id=}+${p.idAbogado}">Eliminar</a></td>
-									<td><a th:href="@{'/abogado/modificar/' +${p.idAbogado}}">Modificar</a></td>
+									<td><a th:href="@{/caso/eliminar?id=}+${p.idCaso}">Eliminar</a></td>
+									<td><a th:href="@{'/caso/modificar/' +${p.idCaso}}">Modificar</a></td>
 
 								</tr>
 							</tbody>
