--- a/WebFinal/src/main/resources/templates/fragments/header.html
+++ b/WebFinal/src/main/resources/templates/fragments/header.html
@@ -20,28 +20,31 @@
 			<!-- this is header -->
 			<nav class="navbar navbar-inverse">
 				<div class="container">
-					
+
 					<div class="navbar-header">
 						<a class="navbar-brand" th:href="@{/especialidad/bienvenido}">LEGGIZ</a>
 					</div>
-					
+
 					<div id="navbar" class="collapse navbar-collapse">
-					
+
 						<ul class="nav navbar-nav">
-						
+
 							<li class="active"><a th:href="@{/especialidad/listar}">Especialidad</a></li>
 							<li class="active"><a th:href="@{/abogado/listar}">Abogado</a></li>
 							<li class="active"><a th:href="@{/detalle/listar}">Detalle</a></li>
-							
-	
+							<li class="active"><a th:href="@{/caso/listar}">Caso</a></li>
+							<li class="active"><a th:href="@{/cliente/listar}">Cliente</a></li>
+							<li class="active"><a th:href="@{/resolucion/listar}">Resolucion</a></li>
+
+
 						</ul>
-						 
+
 					</div>
-					
+
 				</div>
 			</nav>
 		</div>
-	
+
 	</body>
-	
+
 </html>
