--- a/WebFinal/src/main/resources/templates/cliente.html
+++ b/WebFinal/src/main/resources/templates/cliente.html
@@ -25,27 +25,27 @@
 
 				<div class="form-group">
 					<label for="nombre">NOMBRE:</label> <input type="text"
-						th:field="*{nameCliente}" class="form-control" id="nombre"></input>
+						th:field="*{domicilioLegal}" class="form-control" id="nombre"></input>
 					<div class="alert alert-danger"
-						th:if="${#fields.hasErrors('nameCliente')}" th:errors="*{nameCliente}"></div>
+						th:if="${#fields.hasErrors('domicilioLegal')}" th:errors="*{domicilioLegal}"></div>
 				</div>
 				<div class="form-group">
 					<label for="domicilio">Domicilio:</label> <input type="text"
-						th:field="*{nameDomicilio}" class="form-control" id="domicilio"></input>
+						th:field="*{domicilioLegal}" class="form-control" id="domicilioLegal"></input>
 					<div class="alert alert-danger"
-						th:if="${fields.hasErrors('nameDomicilio')}" th:errors="*{nameDomicilio}"></div>
+						th:if="${fields.hasErrors('domicilioLegal')}" th:errors="*{domicilioLegal}"></div>
 				</div>
 				<div class="form-group">
 					<label for="nombre">Telefono:</label> <input type="text"
-						th:field="*{nameTelefono}" class="form-control" id="nombre"></input>
+						th:field="*{telefono}" class="form-control" id="nombre"></input>
 					<div class="alert alert-danger"
-						th:if="${fields.hasErrors('nameTelefono')}" th:errors="*{nameTelefono}"></div>
+						th:if="${fields.hasErrors('telefono')}" th:errors="*{telefono}"></div>
 				</div>
 				<div class="form-group">
 					<label for="nombre">Correo:</label> <input type="text"
-						th:field="*{nameCorreo}" class="form-control" id="nombre"></input>
+						th:field="*{correo}" class="form-control" id="nombre"></input>
 					<div class="alert alert-danger"
-						th:if="${fields.hasErrors('nameCorreo')}" th:errors="*{nameCorreo}"></div>
+						th:if="${fields.hasErrors('correo')}" th:errors="*{correo}"></div>
 				</div>
 			</div>
 			<button type="submit" class="btn btn-primary">Aceptar</button>
