--- a/WebFinal/src/main/resources/templates/buscarEspecialidad.html
+++ b/WebFinal/src/main/resources/templates/buscarEspecialidad.html
@@ -11,42 +11,27 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>2019-02</title>
-
-<!-- Custom fonts for this template-->
-<link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet"
-	type="text/css">
-<link
-	href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-	rel="stylesheet">
-
-<!-- Custom styles for this template-->
-<link href="/css/sb-admin-2.min.css" rel="stylesheet">
 
 </head>
 
 <body id="page-top">
-
-
-				<!-- End of Topbar -->
-
 				<!-- Begin Page Content -->
 				<div class="container-fluid">
 
 					<!-- Page Heading -->
 					<h1 class="h3 mb-4 text-gray-800">Especialidades</h1>
 
-					<form th:action="@{/especialidad/irBuscar}" method="post"
+					<form th:action="@{/especialidad/buscar}" method="post"
 						th:object="${especialidad}">
 						<div class="form-group">
 
-							<label for=cat>Buscar:</label>
+							
 							<div class="col-sm-12">
-								<input type="text" class="form-control" th:field="*{name}"
+								<input type="text" class="form-control" th:field="*{nameEspecialidad}"
 									id="cat" placeholder="Ingrese nombre de especialidad"></input>
 								<div align="right">
 									<button type="submit" class="btn btn-danger">Buscar</button>
-									<a href="/especialidad/listFind" class="btn btn-dark">Cancelar</a>
+									<a href="/especialidad/listar" class="btn btn-dark">Cancelar</a>
 								</div>
 							</div>
 
@@ -65,8 +50,8 @@
 						</thead>
 						<tbody>
 							<tr align="center" th:each="cate: ${listEspecialidades}">
-								<td th:text="${cate.id}"></td>
-								<td th:text="${cate.name}"></td>
+								<td th:text="${cate.idEspecialidad}"></td>
+								<td th:text="${cate.nameEspecialidad}"></td>
 
 							</tr>
 						</tbody>
@@ -80,64 +65,16 @@
 			</div>
 			<!-- End of Main Content -->
 
-			<!-- Footer -->
-			<footer class="sticky-footer bg-white">
-				<div class="container my-auto">
-					<div class="copyright text-center my-auto">
-						<span>Copyright &copy; Web 201902</span>
-					</div>
-				</div>
-			</footer>
-			<!-- End of Footer -->
+			
 
 		</div>
 		<!-- End of Content Wrapper -->
 
 	</div>
-	<!-- End of Page Wrapper -->
+	
 
-	<!-- Scroll to Top Button-->
-	<a class="scroll-to-top rounded" href="#page-top"> <i
-		class="fas fa-angle-up"></i>
-	</a>
+	
 
-	<!-- Logout Modal-->
-	<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog"
-		aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalLabel">¿Listo para
-						salir?</h5>
-					<button class="close" type="button" data-dismiss="modal"
-						aria-label="Close">
-						<span aria-hidden="true">×</span>
-					</button>
-				</div>
-				<div class="modal-body">Seleccione "Cerrar sesión" a
-					continuación si está listo para finalizar su sesión actual.</div>
-				<div class="modal-footer">
-					<form id="logoutForm" th:action="@{/logout}" method="post">
-						<button class="btn btn-danger"
-							onclick="document.getElementById('logoutForm').submit();"
-							type="submit">Cerrar</button>
-						<button class="btn btn-dark" type="button" data-dismiss="modal"
-							th:href="@{/especialidad/list}">Cancel</button>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- Bootstrap core JavaScript-->
-	<script src="/vendor/jquery/jquery.min.js"></script>
-	<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-	<!-- Core plugin JavaScript-->
-	<script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
-
-	<!-- Custom scripts for all pages-->
-	<script src="/js/sb-admin-2.min.js"></script>
 
 </body>
 
